--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -52,13 +52,13 @@
         }
         >button{
             cursor: pointer;
-            background-color: #7885F1;
+            background-color: #656fc2;
             color: $color4;
             font: 600 1rem $text1;
             margin: 3rem;
             
             &:hover{
-                background-color:#3447d4;
+                background-color:#654E92;
             }
         }
     }
