--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -18,10 +18,17 @@ footer{
     position: relative;
     .github{
         height: 5vh;
-        font-size: 30px;
+        font-size: 35px;
         top: 38%;
         position: absolute;        
         right: 10%;
+    }
+    .linkdin{
+        height: 5vh;
+        font-size: 30px;
+        top: 38%;
+        position: absolute;        
+        right: 14%;
     }
     
     }
