--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -11,17 +11,18 @@ nav{
     position: sticky;
     top: 0%;
     z-index: 60;
-    >img{
-        height: 24vh;
-        transform: skew(150deg);
-        transform: translate(-50%);
-        position: absolute;
-        top: -6px;
-        left: 350px;
-        
-        animation: logo 0.9s infinite linear alternate;
-    }
     
+    button{
+        border: none;
+        background-color: transparent;
+        font-size: 1.6rem;
+       position: absolute;
+       right: 5vh;
+       display: none;
+        &:hover{
+            color: red;
+        }
+    }
 
     >a{
         font-size: 1.9rem;
@@ -40,34 +41,18 @@ nav{
         gap: 2rem;
         a{  font-size: 1.2rem;
             color: $color6;
+            position: relative;
+            left: 68vh;
             font-weight: 500;
+            font-family: poppins;
             transition: all 0.3s;
-            letter-spacing: 2px;
+            letter-spacing: 1px;
             &:hover{
-                color:#7885F1;
+                color:#e7b069;
             }
 
            
         }
     }
-   >a{
-    >button{
-        position: absolute;
-        right: -90rem;
-        top: -20px;
-        background-color: #7885F1;
-        border: 1px solid $color1;
-        border-radius: 20px;
-        padding: 0.5rem 2rem;
-        cursor: pointer;
-        color: whitesmoke;
-        letter-spacing: 1px;
-        font-weight: 500;
-        transition: all 0.3s;
-        &:hover{
-            background-color:  #3447d4;
-            color: $color4;
-        }
-    }
-   }
+   
 }
