--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,118 +1,236 @@
-#home{
-    display: flex;
+#home {
+  display: flex;
+  width: 100%;
+  height: 90vh;
+
+  > section {
     width: 100%;
-    height: 90vh;
-    
-
-    >section{
-        // background-color: #f9f9f9;
-        width: 100%;
-        &:first-of-type{
-            padding-left: $p;
-            >div{
-                // border-top: 2px solid $color6_2;
-                height:70%;
-                padding-top: 7rem;
-                >h1{
-                    color: #2d2e32;
-                    font: 700 3.4rem Poppins;
-                    
-                }
-                .typewriterpara{
-                    margin: 20px 0 ;
-                    height: 23px;
-                    // letter-spacing: 0px;
-                    font-size: 2.1rem;
-                    font-weight: 800;
-                    color: #5767e281;
-                }
-                >div{
-                    display: flex;
-                    margin: 5rem 0;
-                    width: 70%;
-                    gap: 2rem;
-                    align-items: center;
-                    >a{
-                        &:first-of-type{
-                            background-color:#7885F1;
-                            color: $color1;
-                            padding: 1rem 2.5rem;
-                            transform: all 0.3s;
-                            border-radius: 50px;
-                            transition: all .2s ease-in-out;
-                            &:hover{
-                                background-color: #3447d4;
-                                transform: scale(1.1);
-                            }
-                        }
-        &:last-of-type{
-            background-color:#7885F1;
-            color: $color1;
-            border-radius: 50px;
-            padding: 1rem 2.5rem;
-            transform: all 0.3s;
-            transition: all .2s ease-in-out;
-            &:hover{
-                background-color: #3447d4;
-                transform: scale(1.1);
-            }
-                        }
-                    }
-                }
-                
-            }
+    &:first-of-type {
+      padding-left: $p;
+      > div {
+        height: 70%;
+        padding-top: 7rem;
+        > h1 {
+          color: #2d2e32;
+          font: 700 3.4rem Poppins;
         }
-        &:last-of-type{
-            border-top: 1px solid $color6_2;
-            display: flex;
-            justify-content: flex-end;
-            flex-direction: column;
-            align-items: center;
-            overflow-x: hidden;
-
-            &::after{
-                content: '';
-                width: 50vmax;
-                height: 45vmax;
-                overflow: hidden;
-                background-color:#7580e62d;
-                
-                position: absolute;
-                z-index: -1;
-                border-radius: 90% 0 0% ;
-            }
-
-            >img{
-                width: 30%;
-                object-fit: contain;
-                position: absolute;
-                top: 25%;
-                right: 4%;
-                height: 73vh;
-
-            }
+        .typewriterpara {
+          margin: 20px 0;
+          height: 23px;
+          // letter-spacing: 0px;
+          font-size: 2.1rem;
+          font-weight: 800;
+          color: #fdc57b;
         }
-
-        
+        > div {
+          display: flex;
+          margin: 5rem 0;
+          // width: 70%;
+          gap: 2rem;
+          align-items: center;
+        }
+      }
     }
-    >svg{
+
+    &:last-of-type {
+      // border-top: 1px solid $color6_2;
+      // display: flex;
+      // justify-content: flex-end;
+      // flex-direction: column;
+      // align-items: center;
+      // overflow-x: hidden;
+
+      > img {
+        width: 40%;
+        object-fit: contain;
         position: absolute;
-        font-size: 3.6rem;
-        color:rgb(202, 188, 188);
-        left: 50%;
-        bottom: -2%;
-        transform: translate(-50%);
-        animation: animateSvg 0.7s infinite linear alternate;
+        top: 19vh;
+        right: 4%;
+        height: 70vh;
+      }
     }
+  }
+
+  > svg {
+    position: absolute;
+    font-size: 3.6rem;
+    color: rgb(202, 188, 188);
+    left: 50%;
+    bottom: -2%;
+    transform: translate(-50%);
+    animation: animateSvg 0.7s infinite linear alternate;
+  }
 }
 
-.handWave{
-    width: 3.2vw;
-    height: 6.5vh;
-    position: absolute;
-    bottom: 13%;
-    right: 3%;
-    filter: drop-shadow(1px 0 0 );
+.handWave {
+  width: 3.2vw;
+  height: 6.5vh;
+  position: absolute;
+  bottom: 13%;
+  right: 3%;
+  filter: drop-shadow(1px 0 0);
+}
 
-    
+// 2nd btn
+
+.ui-btn {
+  --btn-default-bg: #656fc2;
+  --btn-padding: 15px 20px;
+  --btn-hover-bg: #7d65ac;
+  --btn-transition: 0.3s;
+  --btn-letter-spacing: 0.1rem;
+  --btn-animation-duration: 1.2s;
+  --btn-shadow-color: rgba(0, 0, 0, 0.137);
+  --btn-shadow: 0 2px 10px 0 var(--btn-shadow-color);
+  --hover-btn-color: #fff;
+  --default-btn-color: #fff;
+  --font-size: 15px;
+
+  --font-weight: 500;
+  border-radius: 50px;
+  width: 110%;
+  --font-family: Menlo, Roboto Mono, monospace;
+}
+
+/* button settings 👆 */
+
+.ui-btn {
+  box-sizing: border-box;
+  padding: var(--btn-padding);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--default-btn-color);
+  font: var(--font-weight) var(--font-size) var(--font-family);
+  background: var(--btn-default-bg);
+  border: none;
+  cursor: pointer;
+  transition: var(--btn-transition);
+  overflow: hidden;
+  box-shadow: var(--btn-shadow);
+}
+
+.ui-btn span {
+  letter-spacing: var(--btn-letter-spacing);
+  transition: var(--btn-transition);
+  box-sizing: border-box;
+  position: relative;
+  background: inherit;
+}
+
+.ui-btn span::before {
+  box-sizing: border-box;
+  position: absolute;
+  content: "";
+  background: inherit;
+}
+
+.ui-btn:hover,
+.ui-btn:focus {
+  background: var(--btn-hover-bg);
+}
+
+.ui-btn:hover span,
+.ui-btn:focus span {
+  color: var(--hover-btn-color);
+}
+
+.ui-btn:hover span::before,
+.ui-btn:focus span::before {
+  animation: chitchat linear both var(--btn-animation-duration);
+}
+
+@keyframes chitchat {
+  0% {
+    content: "#";
+  }
+
+  5% {
+    content: ".";
+  }
+
+  10% {
+    content: "^{";
+  }
+
+  15% {
+    content: "-!";
+  }
+
+  20% {
+    content: "#$_";
+  }
+
+  25% {
+    content: "№:0";
+  }
+
+  30% {
+    content: "#+.";
+  }
+
+  35% {
+    content: "@}-?";
+  }
+
+  40% {
+    content: "?{4@%";
+  }
+
+  45% {
+    content: "=.,^!";
+  }
+
+  50% {
+    content: "?2@%";
+  }
+
+  55% {
+    content: "\;1}]";
+  }
+
+  60% {
+    content: "?{%:%";
+    right: 0;
+  }
+
+  65% {
+    content: "|{f[4";
+    right: 0;
+  }
+
+  70% {
+    content: "{4%0%";
+    right: 0;
+  }
+
+  75% {
+    content: "'1_0<";
+    right: 0;
+  }
+
+  80% {
+    content: "{0%";
+    right: 0;
+  }
+
+  85% {
+    content: "]>'";
+    right: 0;
+  }
+
+  90% {
+    content: "4";
+    right: 0;
+  }
+
+  95% {
+    content: "2";
+    right: 0;
+  }
+
+  100% {
+    content: "";
+    right: 0;
+  }
 }
