--- a/src/styles/skill.scss
+++ b/src/styles/skill.scss
@@ -15,8 +15,10 @@
     >h4{
         // color: rgb(7, 79, 105);
         font: 500 2.0rem Bangers;
-        margin-left: 32px;
-        margin-top: 10px;
+        // margin-left: 130px;
+        position: relative;
+        left: 42rem;
+        margin-top: 20px;
     }
     // h2{
     //     margin-left: 30px;
